Added pages and bundle ccss
- Added pages css
- Added bundle to import animations and pages css from one line

--- a/BlazorAnimate.csproj
+++ b/BlazorAnimate.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\pages.css" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
